fix home page learn portlet error

--- a/webui/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/webui/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -3,7 +3,7 @@
     border:solid 1px red;
 }
 
-.EStudyPortlet .UILessionList {
+.EStudyPortlet .UILessonList {
     height:300px;
     width: 300px;
     border:solid 1px green;
